# football-betting

./: README.md  generate_figures.py  main.py  pyproject.toml  requirements.txt
data/processed/: flat_backtest.csv  market_epl.parquet
data/raw/: E0_2025-26.csv
notebooks/: 01_backtest_naive.ipynb  02_model_baseline.ipynb  03_model_poisson.ipynb  04_market_compare.ipynb  05_backtest_value.ipynb  scrap.ipynb
notebooks/outputs/: home_bet_summary.csv
scripts/: generate_notebooks.py
src/football_betting/: odds.py  pipeline.py
tests/: conftest.py  test_odds.py
